--- a/pages/inicio.html
+++ b/pages/inicio.html
@@ -13,16 +13,14 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
   <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
-  <link rel="stylesheet" href="./styles/estilos.css">
+ <link rel="stylesheet" href="../styles/estilos.css">
   <title>Patio de La Cañada</title>
 </head>
-
 <body>
-  
-  <header>
+<header>
     <nav class="navbar navbar-dark navbar-expand-lg fixed-top">
       <div class="container">
-        <a class="navbar-brand" href="index.html"><span class="text-warning">Patio de La Cañada</a>
+        <a class="navbar-brand" href="../index.html"><span class="text-warning">Patio de La Cañada</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
           aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
@@ -30,13 +28,16 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="contacto.html">Inicio</a>
+              <a class="nav-link active" aria-current="page" href="../index.html">Inicio</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="nosotros.html">Nosotros</a>
+              <a class="nav-link" href="../pages/nosotros.html">Nosotros</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="carta.html">Carta</a>
+              <a class="nav-link" href="../pages/carta.html">Carta</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="../pages/contacto.html">Contacto</a>
             </li>
         </div>
       </div>
@@ -44,5 +45,3 @@
   </header>
 
 </body>
-
-</html>
